# just-talk

./: .gitignore  Dockerfile.linux-arm  Dockerfile.win  Makefile  README.md  agent.md  asr_pyqt6_app.py  icon.icns  just_talk.spec  pyproject.toml  recording_indicator.py  requirements.txt  test_paste.py  x11_paste.py
.github/workflows/: build-linux.yml  build-macos-arm64.yml  build-macos-intel.yml  build-macos.yml  build-windows.yml  release.yml
aur/: .SRCINFO  PKGBUILD
demo/: DEMO.md  blink-speak-page.html  indicator_demo.html  indicator_demo_gemini.html  layer_shell_demo.py
docs/: linux-audio-issue.md
hotkey/: __init__.py  config.py  listener.py  listener_macos.py  manager.py  persistence.py  settings_ui.py
scripts/: build-windows.ps1  make-icns.sh  setup-macos.sh  setup-windows.ps1
web/: app.js  index.html  styles.css
